# Nova_Examples

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindOIIO.cmake
embedded_deformables/: CG_System.h  CG_Vector.h  CMakeLists.txt  Embedded_Deformables_Driver.cpp  Embedded_Deformables_Driver.h  Embedded_Deformables_Example.cpp  Embedded_Deformables_Example.h  Force.h  Linear_Elasticity.h  Neo_Hookean.h  Position_Based_State.h  Position_Based_State_Linear_Elasticity.h  Position_Based_State_Neo_Hookean.h  Rotated_Stress_Derivative.cpp  Rotated_Stress_Derivative.h
embedded_deformables/embedded_deformables_2d/: CMakeLists.txt  main.cpp
embedded_deformables/embedded_deformables_2d/Standard_Tests/: Standard_Tests.h
embedded_deformables/embedded_deformables_3d/: CMakeLists.txt  main.cpp
embedded_deformables/embedded_deformables_3d/Standard_Tests/: Standard_Tests.h
embedded_deformables/plugin_Embedded_Deformables/: CMakeLists.txt  Embedded_Deformables_Renderable.h  main.cpp
opengl/: ApplicationFactory.cpp  ApplicationFactory.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraControlInterface.h  CommandDispatch.cpp  CommandDispatch.h  Config.cpp  Config.h  IOEvent.cpp  IOEvent.h  IOService.cpp  IOService.h  OpenGLState.h  OrbitCameraControl.cpp  OrbitCameraControl.h  PlanarCameraControl.cpp  PlanarCameraControl.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  Renderable.h  RenderableManager.cpp  RenderableManager.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SharedLibrary.h  StaticCameraControl.h  TextRenderingService.cpp  TextRenderingService.h  TextureManager.cpp  TextureManager.h  (+7 more)
opengl/example/: nova.conf
opengl/example/nanosuit/: nanosuit.mtl  scene.conf
opengl/plugins/Assimp/: AssimpRenderable.cpp  AssimpRenderable_Mesh.cpp  AssimpRenderable_Mesh.h  AssimpRenderable_Model.cpp  AssimpRenderable_Model.h  CMakeLists.txt
opengl/plugins/Assimp/miniball/: CMakeLists.txt
opengl/plugins/FreeTypeTextRenderer/: CMakeLists.txt  FreeTypeRenderer.cpp
opengl/plugins/Grid/: CMakeLists.txt  GridRenderable.cpp
opengl/plugins/Grid/shaders/: Density.frag  Density.vert  Grid.frag  Grid.geom  Grid.vert  InstancedGrid.frag  InstancedGrid.vert  Points.frag  Points.vert
opengl/plugins/OIIOTextureProvider/: CMakeLists.txt  OIIOTextureProvider.cpp
opengl/plugins/SOILTextureProvider/: CMakeLists.txt  SOILTextureProvider.cpp
opengl/plugins/Simulation/: Simulation_Renderable.h
opengl/plugins/TextFileRenderer/: CMakeLists.txt  TextFileRenderer.cpp
opengl/shaders/: BasicColored.h  BasicLineShader.h  BasicMeshShader.h  BasicTextShader.h  BasicWireframeShader.h  SliceModeAddon.vert_mod  ViewportAxisShader.h  ViewportChromeShader.h
variational_fluids/: CMakeLists.txt
variational_fluids/VariationalViscosity3D/: CMakeLists.txt  fluidsim.cpp  main.cpp  util.h
variational_fluids/VariationalViscosity3D/pcgsolver/: sparse_matrix.h
variational_fluids/plugin_Variational_Fluids/: CMakeLists.txt  Variational_Fluids_Renderable.h  main.cpp
